@@ -24,6 +24,7 @@ Changes log
  - Added copyFrom(Response) method to the Response class.
  - Added Guard.getSecret() method for easier customization of the authentication system.
  - Guard.reject() is now public to allow standalone usage, without filtering.
+ - Moved Resource.identifier property to Variant class.
  
 [Enhancements] 
  - The content negotiation algorithm is now more flexible about languages. It will try
